[package]
name = "ducks"
authors = ["Francesco Pira (pirafrank)"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pirafrank/ducks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
human_bytes = "0.4.1"
rayon = "1.7.0"

[[bin]]
name = "ducks"
path = "ducks.rs"

[profile.release]
strip = true

